--- a/style.css
+++ b/style.css
@@ -12,7 +12,14 @@
     pointer-events: none;
 
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* RESET BÁSICO */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +27,7 @@
 }
 
 /* CORPO – NÃO ALTERA FUNDO */
+
 body {
     min-height: 100vh;
     display: flex;
@@ -28,6 +36,12 @@ body {
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px; /* Limita a largura em telas grandes */
+  margin: 0 auto;
 }
 
 /* TÍTULO PRINCIPAL */
@@ -39,6 +53,7 @@ h1 {
 }
 
 /* SUBTÍTULO */
+
 h2 {
     font-size: 22px;
     margin-bottom: 30px;
@@ -46,6 +61,7 @@ h2 {
 }
 
 /* CAIXA DE ATRIBUTOS */
+
 .box {
     background: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(6px);
@@ -57,6 +73,7 @@ h2 {
 }
 
 /* TÍTULO DA BOX */
+
 .título-box {
     font-size: 24px;
     margin-bottom: 15px;
@@ -64,6 +81,7 @@ h2 {
 }
 
 /* TEXTO DOS ATRIBUTOS */
+
 .box p {
     align-items: center;
     font-size: 18px;
@@ -113,4 +131,13 @@ li {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+@media (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+  .menu {
+    flex-direction: column;
+  }
 }
