--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 /* FUNDO DO SITE */
 .fundo-gif {
     position: fixed;
-    top: 50%;
-    left: 50%;
     width: 100%;
+    height: 100vh;
     max-width: 1000px;
     height: auto;
     transform: translate(-50%, -50%);
@@ -121,3 +120,4 @@ body {
         object-fit: cover;
     }
 }
+
