--- a/index.css
+++ b/index.css
@@ -1,15 +1,16 @@
 /* FUNDO DO SITE */
+
 .fundo-gif {
+
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
-    max-width: 1000px;
-    height: auto;
-    transform: translate(-50%, -50%);
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
     z-index: -1;
     pointer-events: none;
-}
+
 
 /* TEXTOS */
 h1 {
@@ -120,4 +121,5 @@ body {
         object-fit: cover;
     }
 }
+
 
