--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 /* FUNDO DO SITE */
 
 .fundo-gif {
-
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* cobre toda a tela */
     z-index: -1;
     pointer-events: none;
+}
 
 
 /* TEXTOS */
@@ -121,5 +121,6 @@ body {
         object-fit: cover;
     }
 }
+
 
 
