--- a/index.css
+++ b/index.css
@@ -1,16 +1,17 @@
 /* FUNDO DO SITE */
 
-.fundo-gif {
+.fundo {
+
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* cobre toda a tela */
+    object-fit: cover;
     z-index: -1;
     pointer-events: none;
-}
 
+}
 
 /* TEXTOS */
 h1 {
@@ -110,6 +111,7 @@ body {
     cursor: pointer;
     z-index: 20;
 }
+
 
 
 
