--- a/index.css
+++ b/index.css
@@ -1,17 +1,23 @@
 /* FUNDO DO SITE */
-
 .fundo {
-
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    overflow: hidden; /* evita scroll */
     z-index: -1;
-    pointer-events: none;
-
 }
+
+.fundo-gif {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* cobre toda a tela sem distorcer */
+}
+
 
 /* TEXTOS */
 h1 {
