--- a/index.css
+++ b/index.css
@@ -1,16 +1,14 @@
 /* DEFININDO FUNDO DE PAGINA*/
 
 .fundo-gif {
-
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 100vw;   /* largura da tela inteira */
+    height: 100vh;  /* altura da tela inteira */
+    object-fit: cover; /* cobre toda a tela mantendo proporção */
     z-index: -1;
     pointer-events: none;
-
 }
 
 /* DEFININDO FORMATAÇÃO DE TEXTOS */
@@ -131,5 +129,6 @@ body {
     cursor: pointer;
 
 }
+
 
 
